--- a/include/views/default/cockpit2/frontend/drivers/drivers-payment.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-payment.phtml
@@ -68,12 +68,12 @@
 						<td>Worked hours</td>
 						<td>${{result.shifts_hours_amount | formatPrice}}</td>
 					</tr>
-					<tr ng-if="!result.hourly && result.calcs.delivery_fee && pay_type_payment" positive-or-negative-color="{{result.calcs.delivery_fee}}">
+					<tr ng-if="!result.hourly && result.calcs.delivery_fee && pay_type_payment && result.show_delivery_fees" positive-or-negative-color="{{result.calcs.delivery_fee}}">
 						<td>Delivery Fee</td>
 						<td>${{result.calcs.delivery_fee | formatPrice}}</td>
 					</tr>
 
-					<tr ng-if="result.calcs.tip && pay_type_payment && result.show_tips" positive-or-negative-color="{{result.calcs.tip}}">
+					<tr ng-if="result.calcs.tip && pay_type_payment && result.show_credit_card_tips" positive-or-negative-color="{{result.calcs.tip}}">
 						<td>Tip</td>
 						<td>${{result.calcs.tip | formatPrice}}</td>
 					</tr>
@@ -228,10 +228,10 @@
 					<td>Restaurant</td>
 					<td>Date</td>
 					<td>
-						<span ng-if="pay_type_payment && result.show_tips">Tip</span>
+						<span ng-if="pay_type_payment && result.show_credit_card_tips">Tip</span>
 					</td>
 					<td>
-						<span ng-if="pay_type_payment && !result.hourly">Delivery Fee</span>
+						<span ng-if="pay_type_payment && !result.hourly && result.show_delivery_fees">Delivery Fee</span>
 					</td>
 					<td ng-if="pay_type_reimbursement">Reimburse</td>
 					<td>
@@ -248,8 +248,8 @@
 					</td>
 					<td>{{order.restaurant}}</td>
 					<td>{{order.date}}</td>
-					<td><span ng-if="pay_type_payment && result.show_tips">${{order.tip | formatPrice}}</span></td>
-					<td><span ng-if="pay_type_payment && !result.hourly">${{order.delivery_fee | formatPrice}}</span></td>
+					<td><span ng-if="pay_type_payment && result.show_credit_card_tips">${{order.tip | formatPrice}}</span></td>
+					<td><span ng-if="pay_type_payment && !result.hourly && result.show_delivery_fees">${{order.delivery_fee | formatPrice}}</span></td>
 					<td ng-if="pay_type_reimbursement">${{order.total_reimburse | formatPrice}}</td>
 					<td ng-if="pay_type_payment">
 						<span ng-if="!result.hourly">
