--- a/include/views/mail/crunchbutton/order/index.phtml
+++ b/include/views/mail/crunchbutton/order/index.phtml
@@ -175,7 +175,7 @@ if( $this->cockpit_url ){
 <?php } ?>
 <div class="xhatch separator-small"></div>
 
-<?php echo $this->render('order/details',['set' => ['order' => $order, 'user' => $user, 'isDriverCockpit' => $isDriverCockpit, 'version' => $version, 'viewer' => $icon ]]);
+<?php echo $this->render('order/details',['set' => ['order' => $order, 'user' => $user, 'isDriverCockpit' => $isDriverCockpit, 'version' => $version, 'viewer' => $icon, 'show_credit_card_tips' => $show_credit_card_tips, 'show_delivery_fees' => $show_delivery_fees ]]);
 
 ;?>
 <br /><br />
