--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -35,11 +35,11 @@
 		</div>
 		<br>
 
-		<a href="http://maps.apple.com/?daddr={{oc.order.address}}&saddr={{oc.order._restaurant_address}}" ng-if="iOS">
+		<a href="http://maps.apple.com/?daddr={{oc.order.address}}&saddr={{oc.order._restaurant_address}}" ng-if="iOS" target="_system">
 			<div class="order-map" style="background: url('https://maps.googleapis.com/maps/api/staticmap?size=400x100&markers=color:green%7Clabel:A%7C{{oc.order.address | clearAddress}}&markers=color:red%7Clabel:B%7C{{oc.order._restaurant_lat}},{{oc.order._restaurant_lon}}&sensor=false&visual_refresh=true&scale=2');"></div>
 		</a>
 
-		<a href="http://maps.google.com/maps?daddr={{oc.order.address}}&saddr={{oc.order._restaurant_address}}" ng-if="!iOS">
+		<a href="http://maps.google.com/maps?daddr={{oc.order.address}}&saddr={{oc.order._restaurant_address}}" ng-if="!iOS" target="_system">
 			<div class="order-map" style="background: url('https://maps.googleapis.com/maps/api/staticmap?size=400x100&markers=color:green%7Clabel:A%7C{{oc.order.address | clearAddress}}&markers=color:red%7Clabel:B%7C{{oc.order._restaurant_lat}},{{oc.order._restaurant_lon}}&sensor=false&visual_refresh=true&scale=2');"></div>
 		</a>
 
@@ -51,8 +51,8 @@
 				<div class="divider"></div>
 
 				<div class="info-address"><p class="order-info-address">
-						<a href="http://maps.apple.com/?q={{oc.order._restaurant_address}}" ng-if="iOS">
-						<a href="http://maps.google.com/maps?q={{oc.order._restaurant_address}}" ng-if="!iOS">
+						<a href="http://maps.apple.com/?q={{oc.order._restaurant_address}}" ng-if="iOS" target="_system">
+						<a href="http://maps.google.com/maps?q={{oc.order._restaurant_address}}" ng-if="!iOS" target="_system">
 						<span ng-bind-html-unsafe="oc.order._restaurant_address | nl2br"></span></a></p></div>
 			</div>
 		</div>
@@ -65,8 +65,8 @@
 				<div class="divider"></div>
 
 				<div class="info-address"><p class="order-info-address">
-					<a href="http://maps.apple.com/?q={{oc.order.address}}" ng-if="iOS">
-					<a href="http://maps.google.com/maps?q={{oc.order.address}}" ng-if="!iOS">
+					<a href="http://maps.apple.com/?q={{oc.order.address}}" ng-if="iOS" target="_system">
+					<a href="http://maps.google.com/maps?q={{oc.order.address}}" ng-if="!iOS" target="_system">
 					<span ng-bind-html-unsafe="oc.order.address | nl2br"></span>
 					</a></p></div>
 
