--- a/include/views/mail/crunchbutton/order/details.phtml
+++ b/include/views/mail/crunchbutton/order/details.phtml
@@ -187,7 +187,13 @@ if( $version == 'customer' ){
 	</tr>
 	<?php
 	// change fax for 3rd party restaurants #2962
-	$showTipAndDeliveryFee = !( $viewer == 'restaurant' && $order->restaurant()->delivery_service );
+
+	if( $viewer != 'driver' ){
+		$showTipAndDeliveryFee = true;
+		$show_credit_card_tips = true;
+	} else {
+		$showTipAndDeliveryFee = !$order->restaurant()->delivery_service;
+	}
 
 	if( $showTipAndDeliveryFee && $show_credit_card_tips ){
 		if ( $order->pay_type == 'card' && $order->tip ) { ?>
