--- a/include/views/default/cockpit2/frontend/listview/listview-paging.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-paging.phtml
@@ -1,12 +1,12 @@
 <a href="" ng-click="viewLess()" ng-if="allowAll && query.limit == 'none'">Show Less</a>
 <a href="" ng-click="viewAll()" ng-if="allowAll && query.limit != 'none'">Show All</a>
 
-<table class="tb-pagination right" ng-if="pages > 1" page-key>
+<table class="tb-pagination right" ng-if="pages > 1 || more" page-key>
 	<tbody>
 		<tr>
 			<td class="td-prev"><button class="button orange" ng-if="query.page > 1" ng-click="setPage(query.page-1)">prev</button></td>
-			<td class="td-info">Page {{query.page}} of {{pages}}</td>
-			<td class="td-next"><button class="button orange" ng-if="query.page < pages" ng-click="setPage(query.page+1)">next</button></td>
+			<td class="td-info">Page {{query.page}} of <span ng-if="query.fullcount != 'false'">{{pages}}</span><span ng-if="query.fullcount == 'false'">many</span></td>
+			<td class="td-next"><button class="button orange" ng-if="(query.page < pages) || more" ng-click="setPage(query.page+1)">next</button></td>
 		</tr>
 	</tbody>
 </table>
