--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -408,7 +408,11 @@
 								<div class="badge" ng-show="newDriverOrders.count">{{newDriverOrders.count}}</div>
 								<i class="fa fa-truck"></i>
 							</div>
-							<div class="notification notification-support" ng-class="{'notification-support-mobile': !account.user.permissions.GLOBAL}" ng-click="navigation.menu('right')">
+							<div class="hide-desktop notification notification-support" ng-class="{'notification-support-mobile': !account.user.permissions.GLOBAL}" ng-click="navigation.menu('right')">
+								<div class="badge" ng-show="supportMessages.count && supportMessages.count != '0'">{{supportMessages.count}}</div>
+								<i class="fa fa-comment"></i>
+							</div>
+							<div class="hide-mobile notification notification-support" ng-class="{'notification-support-mobile': !account.user.permissions.GLOBAL}" ng-click="supportToggle()">
 								<div class="badge" ng-show="supportMessages.count && supportMessages.count != '0'">{{supportMessages.count}}</div>
 								<i class="fa fa-comment"></i>
 							</div>
